Changes for Linux and Windows version 1.2.3:
--------------------------------------------------------------------
- Fixed support for MPEG 2.5 streams and files
- Added the ability to save streams locally for offline listening
- Windows release now uses Jean-Michel HERVE's x86 optimizations

Changes for Linux version 1.2.2:
--------------------------------------------------------------------
- Incorporated x86 assembly MP3 decoder optimizations from
  "Jean-Michel HERVE" <tuo_stg@hotmail.com>

- Added support for a preferences file in ~/.freeamp_prefs
  The command-line properties are no longer supported.
  See the README for more information.

Changes for Windows version 1.2.1:
--------------------------------------------------------------------
- Fixed minimization bugs

Changes for Windows version 1.2:
--------------------------------------------------------------------
- All cool changes listed for Linux Below +

- Real Playlist Support

- Save playlists to your Rio

- Live in tray

- Pref Panel

Changes for Linux version 1.2:
--------------------------------------------------------------------

- Added assembly decoder optimizations, input and output buffering. FreeAmp
  should now be able to play audio uninterrupted, unless the load
  on the machine gets too great. FreeAmp is now much less processor 
  intensive, while consuming more memory.

- Added support for SHOUTcast, HTTP and RTP streaming. You can now specify
  a file, an http://, or a rtp:// on the command line. For more information
  on SHOUTcast, please see http://icecast.linuxpower.org or
  http://www.shoutcast.com

- Logging support. Using the Logging, LogInput, LogDecode properties
  the user can now log debug information and errors to the file freeamp.log.
  This will allow the freeamp team to debug problems with versions of FreeAmp
  in the field.

- VBR stream support. FreeAmp handles VBR streams correctly. It might
  have done this in previous versions too, but it does it better now. :-)
