@@ -18,7 +18,7 @@
         along with this program; if not, Write to the Free Software
         Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
         
-        $Id: player.cpp,v 1.119 1999/04/26 02:50:21 elrod Exp $
+        $Id: player.cpp,v 1.120 1999/04/27 21:03:22 mhw Exp $
 ____________________________________________________________________________*/
 
 #include <iostream.h>
@@ -220,8 +220,9 @@ SetArgs(int32 argc, char **argv)
             {
                Usage(argv[0]);
                exit(0);
-               argList.AddItem(argv[i]);
             }
+	    else
+	       goto normalArg;
             break;
          case 'u':
          case 'U':
@@ -248,8 +249,17 @@ SetArgs(int32 argc, char **argv)
                   }
                   m_argUIList->AddItem(argUI);
                }
+	       else
+		  goto normalArg;
                break;
             }
+	 case 's':
+	 case 'S':
+	    if (!strcmp(&(arg[2]), "ave"))
+		m_context->argFlags |= FAC_ARGFLAGS_SAVE_STREAMS;
+	    else
+		goto normalArg;
+	    break;
 #if 0				// We use the prefs file now
          case 'p':
             if (!strcmp(&(arg[2]), "rop"))
@@ -284,13 +294,13 @@ SetArgs(int32 argc, char **argv)
                }
             }
             else
-            {
-               argList.AddItem(argv[i]);
-            }
+	       goto normalArg;
             break;
 #endif
          default:
-             argList.AddItem(argv[i]);
+	 normalArg:
+            argList.AddItem(argv[i]);
+	    break;
          }
       }
       else
@@ -337,7 +347,7 @@ Usage(const char *progname)
       return;
 
    printf("FreeAmp version " FREEAMP_VERSION " -- Usage:\n\n");
-   printf("freeamp [-ui <UI plugin name>] <MP3 file/stream> "
+   printf("freeamp [-save] [-ui <UI plugin name>] <MP3 file/stream> "
 	  "[MP3 file/stream] ...\n\n");
    printf("Example command line:\n\n");
    printf("   freeamp -ui freeamp-linux.ui mysong1.mp3 mysong2.mp3\n\n");
