@@ -20,7 +20,7 @@ dnl Process this file with your mom to produce a configure script
 AC_INIT(base/src/player.cpp)
 AC_CONFIG_AUX_DIR(config)
 AC_CANONICAL_HOST
-AM_INIT_AUTOMAKE(freeamp, 1.2.2)
+AM_INIT_AUTOMAKE(freeamp, 1.2.3)
 AM_CONFIG_HEADER(config/config.h)
 
 AC_PROG_MAKE_SET
