@@ -1,3 +1,4 @@
+4-27-1999 Release of Linux/Windows 1.2.3 version.
 4-22-1999 Release of Linux 1.2.2 version.
 4-18-1999 Release of Windows 1.2.1 version.
 4-15-1999 Release of Windows 1.2 version.
